--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "aes_hdl_51_noia"]
 	path = aes_hdl_51_noia
 	url = git@github.com:Lucien98/aes_dom_51cycles.git
+[submodule "maskVerif"]
+	path = maskVerif
+	url = git@github.com:Lucien98/maskVerif_evaluation.git
